...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditLandProfile">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:text="Name"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
